reports/Tutorial2.log
Traceback (most recent call last):
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/panxopanza/programs/miniconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Tatm = 300                                           # Temperatura de la atmósfera (K)
Eatm = (1 - rf.T_atmosphere(lam))*np.pi*rf.Bplanck(lam,Tatm) # Poder de emisión de la atmósfera (W/m^2-um)

fig, ax1 = plt.subplots(figsize=(12,4))
ax1.plot(lam,Eatm)

ax1.set_xlabel('Longitud de onda, $\mu$m')
ax1.set_ylabel('Poder de emisión (W/m$^2$-$\mu$m)')
ax1.set_title)
ax1.set_xscale('log')
ax1.set_xticks([0.3,0.4,0.75,1.4,3,8,15,30, 50, 100])
ax1.xaxis.set_major_formatter(FuncFormatter(lambda y, _: '{:.16g}'.format(y)))
------------------

[0;36m  File [0;32m"/tmp/ipykernel_436/4151541918.py"[0;36m, line [0;32m9[0m
[0;31m    ax1.set_title)[0m
[0m                 ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unmatched ')'

SyntaxError: unmatched ')' (4151541918.py, line 9)

